Improve styling for category selection

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,3 +42,12 @@ body {
   content: "$";
 }
 
+.category-filter {
+  padding-left: 20px;
+  padding-top: 50px;
+}
+
+.category-filter select {
+  width: 150px;
+}
+
