--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,6 +15,15 @@ body {
 .header {
   height: 5vh;
   background-color: gray;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-right: 20px;
+}
+
+.header > i {
+  position: relative;
+  font-size: 1.4rem;
 }
 
 .product-list {
@@ -74,3 +83,27 @@ body {
   width: 100px;
 }
 
+.cart-container {
+  position: relative;
+  display: inline-block;
+}
+
+.cart-icon {
+  font-size: 2rem;
+}
+
+.cart-count {
+  position: absolute;
+  top: -1px;
+  left: -5px;
+  min-width: 20px;
+  width: auto;
+  height: 20px;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.9rem;
+}
