--- a/client/src/App.css
+++ b/client/src/App.css
@@ -104,7 +104,7 @@ button:focus {
 }
 
 .cart-product:nth-child(odd) {
-  background-color: #232323;
+  background-color: #434343;
 }
 
 .cart-product:nth-child(even) {
@@ -115,6 +115,12 @@ button:focus {
   width: 70px;
   height: 70px;
   padding: 0 20px;
+}
+
+.cart-back {
+  position: absolute;
+  top: 10px;
+  left: 10px;
 }
 
 .category-filter {
