--- a/client/src/App.css
+++ b/client/src/App.css
@@ -106,6 +106,10 @@ button:focus {
   background-color: #323232;
 }
 
+.cart-table tfoot td {
+  background-color: #000;
+}
+
 .cart-product {
   justify-content: space-between;
 }
@@ -178,7 +182,7 @@ button[disabled], button[disabled]:hover, button[disabled]:focus, button[disable
   border: 0px;
 }
 
-.cart-back {
+.back {
   position: absolute;
   top: 10px;
   left: 10px;
@@ -260,7 +264,7 @@ button[disabled], button[disabled]:hover, button[disabled]:focus, button[disable
   width: 200px;
 }
 
-.cart-container, .icon {
+.cart-container, .icon, .order {
   cursor: pointer;
 }
 
