--- a/client/src/App.css
+++ b/client/src/App.css
@@ -268,6 +268,11 @@ button[disabled], button[disabled]:hover, button[disabled]:focus, button[disable
   cursor: pointer;
 }
 
+#order-display {
+  background-color: #242424;
+  margin-bottom: 20px;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
