--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,12 +31,15 @@ button:focus {
 }
 
 .header {
+  position: fixed;
+  box-sizing: border-box;
+  width: 100vw;
   height: 5vh;
   background-color: #434343;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0px 20px;
+  padding: 0px 50px;
 }
 
 .header > i {
