Added colored text to notification when adding to cart

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -30,6 +30,11 @@ button:focus {
   align-items: center;
 }
 
+.special-text {
+  color: red;
+  font-weight: bold;
+}
+
 .header {
   position: fixed;
   box-sizing: border-box;
