--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,6 @@
 #root {
   margin: 0 auto;
+  margin-top: 5vh;
   text-align: center;
   width: 100vw;
 }
@@ -45,6 +46,7 @@ button:focus {
   justify-content: space-between;
   align-items: center;
   padding: 0px 50px;
+  top: 0;
 }
 
 .header > i {
@@ -188,12 +190,6 @@ button[disabled], button[disabled]:hover, button[disabled]:focus, button[disable
   border: none;
   cursor: default;
   border: 0px;
-}
-
-.back {
-  position: absolute;
-  top: 10px;
-  left: 10px;
 }
 
 .category-filter {
