--- a/client/src/App.css
+++ b/client/src/App.css
@@ -106,6 +106,19 @@ button:focus {
   height: 1rem;
 }
 
+.product-details {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  padding: 0 30px;
+}
+
+.product-details-info {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
 .cart-table {
   width: 100%;
   table-layout: fixed;
