--- a/client/src/App.css
+++ b/client/src/App.css
@@ -88,6 +88,12 @@ button:focus {
 
 .product-price {
   font-style: italic;
+  margin: 0;
+}
+
+.old-price {
+  text-decoration: line-through;
+  color: rgba(200, 200, 200, 0.7);
 }
 
 .product-price::after, .cart-total::after {
@@ -105,6 +111,18 @@ button:focus {
   text-align: center;
   font-size: 1.2rem;
   width: 30%;
+}
+
+.product-discount {
+  position: absolute;
+  left: 60px;
+  background-color: rgb(170, 7, 7);
+  padding: 20px 5px;
+  font-size: 1.2rem;
+}
+
+.product-discount p {
+  margin: 0;
 }
 
 .product-current {
@@ -289,6 +307,7 @@ button[disabled], button[disabled]:hover, button[disabled]:focus, button[disable
 
 .icon {
   font-size: 2rem;
+  position: relative;
 }
 
 .cart-count {
