Stop displaying expired discounts

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -308,6 +308,9 @@ button[disabled], button[disabled]:hover, button[disabled]:focus, button[disable
 .icon {
   font-size: 2rem;
   position: relative;
+}
+
+.icon-width {
   width: 200px;
 }
 
